<resources>
    <string name="app_name">Example-Employee-App</string>
    <string name="title_list_fragment">List</string>
    <string name="title_search_fragment">Search</string>
    <string name="title_remove_list_fragment">Add or Remove</string>
    <string name="search_by_name">Search Employee by name</string>
    <string name="detaiil_page">Details</string>
    <string name="add_page">Add Employee</string>
    <string name="edit_page">Edit Employee</string>
    <string name="name_">Name : </string>
    <string name="id_">Id : </string>
    <string name="age_">Age : </string>
    <string name="salary_">Salary : </string>
    <string name="rating_">Rating : </string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="age">Age</string>
    <string name="salary">Salary</string>
    <string name="success">Success!!!</string>
    <string name="something_wrong">Something went wrong. Please try again</string>
    <string name="invalid_info">Please provide valid information</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_employee_confirmation">Do you want to delete this employee?</string>
    <string name="employee_deleted">Employee Deleted!</string>
</resources>
