<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="obj"
            type="com.fahim.example_employee_app.model.Employee" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:elevation="50dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.activity.AddOrEditActivity"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        android:weightSum="3">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/name_"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:layout_gravity="center_vertical"/>
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_margin="2dp"
                            android:elevation="20dp">
                            <EditText
                                android:id="@+id/et_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:layout_margin="5dp"
                                android:text="@{obj.name}"
                                android:hint="@string/name"/>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        android:weightSum="3">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/id_"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:layout_gravity="center_vertical"/>
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_margin="2dp"
                            android:elevation="20dp">
                            <EditText
                                android:id="@+id/et_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:layout_margin="5dp"
                                android:text="@{Integer.toString(obj.id)}"
                                android:hint="@string/id"
                                android:inputType="number"/>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        android:weightSum="3">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/age_"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:layout_gravity="center_vertical"/>
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_margin="2dp"
                            android:elevation="20dp">
                            <EditText
                                android:id="@+id/et_age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:layout_margin="5dp"
                                android:text="@{Integer.toString(obj.age)}"
                                android:inputType="number"
                                android:hint="@string/age"/>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        android:weightSum="3">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/salary_"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:layout_gravity="center_vertical"/>
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_margin="2dp"
                            android:elevation="20dp">
                            <EditText
                                android:id="@+id/et_salary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:layout_margin="5dp"
                                android:text="@{Float.toString(obj.salary)}"
                                android:inputType="numberDecimal"
                                android:hint="@string/salary"/>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</layout>
